add dataops post and rm slots from featured

--- a/_posts/2023-08-17-Slots.md
+++ b/_posts/2023-08-17-Slots.md
@@ -5,8 +5,8 @@ title: "Slots"
 categories: [ shitpost ]
 tags: 
 description: "Python slots"
-featured: true
-hidden: true
+featured: false
+hidden: false
 image: assets/images/slots.jpg
 ---
 
