--- a/_posts/2023-08-17-Slots.md
+++ b/_posts/2023-08-17-Slots.md
@@ -2,7 +2,7 @@
 layout: post
 date: 2023-08-17
 title: "Slots"
-categories: [ shitpost ]
+categories: [ shitpost, programming ]
 tags: 
 description: "Python slots"
 featured: false
