--- a/_posts/2023-08-23-ABCs.md
+++ b/_posts/2023-08-23-ABCs.md
@@ -2,7 +2,7 @@
 layout: post
 date: 2023-08-23
 title: "ABCs"
-categories: [ shitpost ]
+categories: [ shitpost, programming ]
 tags: 
 description: "Python ABCs"
 featured: true
