add post 1 on databases and change ABCs to non-featured

--- a/_posts/2023-08-23-ABCs.md
+++ b/_posts/2023-08-23-ABCs.md
@@ -5,8 +5,8 @@ title: "ABCs"
 categories: [ shitpost, programming ]
 tags: 
 description: "Python ABCs"
-featured: true
-hidden: true
+featured: false
+hidden: false
 image: assets/images/ABCs.jpg
 ---
 
